5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1836_2603.log
== SUBMITION (2019-07-01 22:56:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array9eval(input("vetor:"))
a = a
for i in range(4):
	a[:,1] = sorted(a[:,1], reverse = True)
print(a7)
-- EXECUTION TIME:
0.874963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 3, in <module>
    a = array9eval(input())
NameError: name 'array9eval' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:57:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array9eval(input("vetor:"))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,1], reverse = True)
print(a7)
-- EXECUTION TIME:
0.961299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 3, in <module>
    a = array9eval(input())
NameError: name 'array9eval' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:57:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array9eval(input("vetor:"))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,1], reverse = True)
print(a7)
-- EXECUTION TIME:
1.15637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 3, in <module>
    a = array9eval(input())
NameError: name 'array9eval' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:57:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array9eval(input("vetor:"))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,1], reverse = True)
print(a7)
-- EXECUTION TIME:
1.3842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 3, in <module>
    a = array9eval(input())
NameError: name 'array9eval' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:57:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array9eval(input("vetor:"))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,1], reverse = True)
print(a)
-- EXECUTION TIME:
0.923005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 3, in <module>
    a = array9eval(input("vetor:"))
NameError: name 'array9eval' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:57:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input("vetor:")))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,1], reverse = True)
print(a)
-- EXECUTION TIME:
1.0186
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:57:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input("vetor:")))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,1], reverse = True)
print(a)
-- EXECUTION TIME:
1.04173
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:57:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input("vetor:")))
a = a
for i in range(4):
	a[:,i] = sorted(a[:,1], reverse = True)
print(a)
-- EXECUTION TIME:
1.12545
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:01:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = array(eval(input("vetor:")))

a = a

for i in range(4):
	a[:,i] = sorted(a[:,i], reverse = True)
print(a)
-- EXECUTION TIME:
0.93166
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
